-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9, 10, 11
-
Component/s: hotspot
-
b38
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8194624 | 11 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
| JDK-8194789 | 10.0.1 | Goetz Lindenmaier | P3 | Resolved | Fixed | b01 |
print_threads_compiling prints the tasks compiler threads are working on.
It gets the task from the thread, checks it for NULL, and then reads the task again from the thread. in the meantime, the compiler thread can set the task back to NULL so that the check was pointless.
Read task only once.
It gets the task from the thread, checks it for NULL, and then reads the task again from the thread. in the meantime, the compiler thread can set the task back to NULL so that the check was pointless.
Read task only once.
- backported by
-
JDK-8194624 Fix SIGSEGV in print_threads_compiling.
-
- Resolved
-
-
JDK-8194789 Fix SIGSEGV in print_threads_compiling.
-
- Resolved
-
- relates to
-
JDK-8063112 Compiler diagnostic commands should have locking instead of safepoint
-
- Closed
-