8194482: Fix SIGSEGV in print_threads_compiling

Reviewed-by: kvn